--- a/style/custom_dark.scss
+++ b/style/custom_dark.scss
@@ -7,17 +7,13 @@
 
 /*-- scss:defaults --*/
 
+$primary: white;
 $navbar-bg: #181818;
 $body-bg: #181818;
 $body-color: rgb(200, 200, 200);
-$figure-caption-color: rgb(100, 100, 100) !important;
 $code-block-bg: rgb(40, 40, 40);
 
 // /*-- scss:rules --*/
-
-p, li { 
-    color: rgb(220, 220, 220) !important;
-}
 
 h1, h2, h3, h4, h5, h6, h7 {
     color: white !important;
