--- a/style/custom_light.scss
+++ b/style/custom_light.scss
@@ -7,19 +7,17 @@
 
 /*-- scss:defaults --*/
 
+$primary: black;
 $navbar-bg: rgb(50, 50, 50);
-$figure-caption-color: rgb(170, 170, 170) !important;
+$body-color: rgb(20, 20, 20);
+// $figure-caption-color: rgb(170, 170, 170) !important;
 // $font-family-sans-serif: "Source Sans Pro";
 
 
 // /*-- scss:rules --*/
 
-p, li { 
-    color: rgb(10, 10, 10) !important;
-}
-
 h1, h2, h3, h4, h5, h6, h7 {
-    color: black !important;  
+    color: black !important;
 }
 
 // "Source Sans Pro" font
